All notable changes to this project will be documented in this file. For a
complete changelog, see https://github.com/JolleJolles/animlab/commits/

Not committed yet
    * Added new function for converting rpi camera stream to right dims
    * Drawing of rectangle now automatically gets coordinates in right order

2019-06-18 - version 1.4.4
    * Added function to check if system is rpi or not
2019-06-18 - version 1.4.3
    * Added zoom_to_roi and roi_to_zoom functions
2019-06-14 - version 1.4.2
    * Added get_reccoords function
2019-06-14 - version 1.4.1
    * Added sample script for drawing
    * Updated drawing functions to make them more generic
    * Added small cross drawing function
    * Added small function to get closestnumber of n divisible by m
2019-06-14 - version 1.4.0
    * Incorporated mouse events class and drawing functions for crosshair
      and rectangle
2019-06-14 - version 1.3.0
    * Moved calibrate and positioncam functions to the animrec package
2019-06-14 - version 1.3.0
    * Set up calibrate function for undistorting camera input
    * Set up positioncam function to help correctly position the camera
2019-06-10 - version 1.2.3
    * Updated readme
2019-06-10 - version 1.2.2
    * Changed videowriter fourcc code
    * Fixed converter class keyboardinterrupt error
    * FFmpeg headers and frames are now hidden
    * Fixed resize issue when width or height is not divisible by 2
    * Added doc to main Converter class
    * Fixed multiprocessing pools error when less than provided are needed
    * Fixed issue with Fourcc in video converter function
2019-06-07 - version 1.2.0
    * Added convert function and jupyter notebook tutorial for converting videos
    * Updated copyright statements
2019-01-31 - version 1.1.0
    * Added documentation how to install python virtual environments
2018-12-31 - version 1.0.0
    * Initial release, created the package, made publicly available on Github
2018-12-23 - version 0.1.3